// Copyright 2022 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package google.scp.pbs.transactions.proto;

import "cc/core/common/proto/common.proto";

// For faster allocations of sub-messages.
option cc_enable_arenas = true;

enum CommandType {
  COMMAND_TYPE_UNKNOWN = 0;
  CONSUME_BUDGET_COMMAND_1_0 = 1;
  BATCH_CONSUME_BUDGET_COMMAND_1_0 = 2;
  CONSUME_BUDGET_COMMAND_1_1 = 3;
}

message BudgetConsumption_1_0 {
  uint64 time_bucket = 1;
  uint32 token_count = 2;
  // Index of the budget consumption request
  // in client request payload
  optional uint64 request_index = 3;
}

message BatchConsumeBudgetCommand_1_0 {
  string budget_key_name = 1;
  repeated BudgetConsumption_1_0 budget_consumptions = 2;
}

message ConsumeBudgetCommand_1_0 {
  string budget_key_name = 1;
  uint64 time_bucket = 2;
  uint32 token_count = 3;
}

message ConsumeBudgetCommand_1_1 {
  string budget_key_name = 1;
  uint64 time_bucket = 2;
  uint32 token_count = 3;
  // Index of the budget consumption request
  // in client request payload
  optional uint64 request_index = 4;
}

message TransactionCommandLog_1_0 {
  CommandType type = 1;
  bytes log_body = 2;
}

message TransactionCommandLog {
  core.common.proto.Version version = 1;
  bytes log_body = 2;
}
